{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1074,
  "lineage": "4e1e465d-ff70-e7ba-fb8a-c2ed6beb4d55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02424efdf6d222d4b",
            "arn": "arn:aws:ec2:eu-central-1:913024026099:elastic-ip/eipalloc-02424efdf6d222d4b",
            "association_id": "eipassoc-010fd1398e51051f9",
            "domain": "vpc",
            "id": "eipalloc-02424efdf6d222d4b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-02515c333a7dd92b0",
            "private_dns": "ip-10-0-0-120.eu-central-1.compute.internal",
            "private_ip": "10.0.0.120",
            "public_dns": "ec2-63-180-77-142.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.180.77.142",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:internet-gateway/igw-054d8e7ccdb982d73",
            "id": "igw-054d8e7ccdb982d73",
            "owner_id": "913024026099",
            "region": "eu-central-1",
            "tags": {
              "Name": "test_igw"
            },
            "tags_all": {
              "Name": "test_igw"
            },
            "vpc_id": "vpc-0937cc696c132b9d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02424efdf6d222d4b",
            "association_id": "eipassoc-010fd1398e51051f9",
            "connectivity_type": "public",
            "id": "nat-045445d1436396dd6",
            "network_interface_id": "eni-02515c333a7dd92b0",
            "private_ip": "10.0.0.120",
            "public_ip": "63.180.77.142",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09e43da875b05bf6a",
            "tags": {
              "Name": "test_nat_gateway"
            },
            "tags_all": {
              "Name": "test_nat_gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:route-table/rtb-0781d7fbbca511cc8",
            "id": "rtb-0781d7fbbca511cc8",
            "owner_id": "913024026099",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045445d1436396dd6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_private_rt"
            },
            "tags_all": {
              "Name": "test_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0937cc696c132b9d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913024026099",
            "id": "rtb-0781d7fbbca511cc8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_nat_gateway",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:route-table/rtb-0dcb8f78a44c017b6",
            "id": "rtb-0dcb8f78a44c017b6",
            "owner_id": "913024026099",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054d8e7ccdb982d73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_public_rt"
            },
            "tags_all": {
              "Name": "test_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0937cc696c132b9d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913024026099",
            "id": "rtb-0dcb8f78a44c017b6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dddce96752c1899e",
            "region": "eu-central-1",
            "route_table_id": "rtb-0781d7fbbca511cc8",
            "subnet_id": "subnet-02f7198b62a991001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_nat_gateway",
            "aws_route_table.test_private_rt",
            "aws_subnet.test_private_subnet",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d96c1ced2178a24e",
            "region": "eu-central-1",
            "route_table_id": "rtb-0781d7fbbca511cc8",
            "subnet_id": "subnet-0b074505d46158cae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_nat_gateway",
            "aws_route_table.test_private_rt",
            "aws_subnet.test_private_subnet",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0998e5608ae96e581",
            "region": "eu-central-1",
            "route_table_id": "rtb-0dcb8f78a44c017b6",
            "subnet_id": "subnet-09e43da875b05bf6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_public_rt",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:subnet/subnet-02f7198b62a991001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f7198b62a991001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913024026099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test_private_subnet_1",
              "karpenter.sh/discovery": "test_eks_cluster"
            },
            "tags_all": {
              "Name": "test_private_subnet_1",
              "karpenter.sh/discovery": "test_eks_cluster"
            },
            "vpc_id": "vpc-0937cc696c132b9d2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913024026099",
            "id": "subnet-02f7198b62a991001",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:subnet/subnet-0b074505d46158cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b074505d46158cae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913024026099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test_private_subnet_2",
              "karpenter.sh/discovery": "test_eks_cluster"
            },
            "tags_all": {
              "Name": "test_private_subnet_2",
              "karpenter.sh/discovery": "test_eks_cluster"
            },
            "vpc_id": "vpc-0937cc696c132b9d2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913024026099",
            "id": "subnet-0b074505d46158cae",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:subnet/subnet-09e43da875b05bf6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e43da875b05bf6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913024026099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test_public_subnet",
              "karpenter.sh/discovery": "test_eks_cluster"
            },
            "tags_all": {
              "Name": "test_public_subnet",
              "karpenter.sh/discovery": "test_eks_cluster"
            },
            "vpc_id": "vpc-0937cc696c132b9d2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913024026099",
            "id": "subnet-09e43da875b05bf6a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:913024026099:vpc/vpc-0937cc696c132b9d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4cbc39610640451",
            "default_route_table_id": "rtb-09ec07910f7f6e109",
            "default_security_group_id": "sg-0a49ee61d9e7a644a",
            "dhcp_options_id": "dopt-0c2fb21489cd31fed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0937cc696c132b9d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ec07910f7f6e109",
            "owner_id": "913024026099",
            "region": "eu-central-1",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}